Fixing alignment of social icons

--- a/css/less/navigation.less
+++ b/css/less/navigation.less
@@ -1,6 +1,6 @@
 //
 // Navigation
-// @version 1.1.2
+// @version 1.2.1
 // @since 1.0
 //
 
@@ -9,7 +9,7 @@
   .navbar-nav {
 
     &.nav-pills > li > a {
-      padding: 12px 8px;
+      padding: 14px 8px;
     }
   }
 
